force-app/main/default/objects/Bonus__c/Bonus__c.object-meta.xml
<CustomObject>
    <label>Bonus and Violation</label>
    <nameField>
        <displayFormat>BaV-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus and Violation</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>