force-app/main/default/objects/Bonus__c/fields/Accounted_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounted_Date__c</fullName>
    <label>Occurred Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>