force-app/main/default/objects/Bonus__c/fields/Bonus_in__c.field-meta.xml
<CustomField>
    <fullName>Bonus_in__c</fullName>
    <label>Bonus in</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>