force-app/main/default/objects/Bonus__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>if(
MONTH( Accounted_Date__c )=1,&quot;January&quot;,
If(MONTH( Accounted_Date__c)=2,&quot;February&quot;,
If(MONTH(  Accounted_Date__c)=3,&quot;March&quot;,
If(MONTH(  Accounted_Date__c)=4,&quot;April&quot;,
If(MONTH( Accounted_Date__c)=5,&quot;May&quot;,
If(MONTH( Accounted_Date__c)=6,&quot;June&quot;,
If(MONTH( Accounted_Date__c)=7,&quot;July&quot;,
If(MONTH(  Accounted_Date__c)=8,&quot;August&quot;,
If(MONTH(  Accounted_Date__c)=9,&quot;September&quot;,
If(MONTH(  Accounted_Date__c)=10,&quot;October&quot;,
If(MONTH(  Accounted_Date__c)=11,&quot;November&quot;,&quot;December&quot;)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <type>Text</type>
</CustomField>