force-app/main/default/objects/Bonus__c/fields/PaidStatus__c.field-meta.xml
<CustomField>
    <fullName>PaidStatus__c</fullName>
    <label>Paid Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>