force-app/main/default/objects/Bonus__c/fields/PaidType__c.field-meta.xml
<CustomField>
    <fullName>PaidType__c</fullName>
    <label>Paid Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Bonus</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Holiday Bonus</fullName>
            </value>
            <value>
                <fullName>Referral Bonus</fullName>
            </value>
            <value>
                <fullName>Seniority bonus</fullName>
            </value>
            <value>
                <fullName>Signing Bonus</fullName>
            </value>
            <value>
                <fullName>Spot Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>