force-app/main/default/objects/Bonus__c/fields/Payslip__c.field-meta.xml
<CustomField>
    <fullName>Payslip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payslip</label>
    <referenceTo>Payslip__c</referenceTo>
    <relationshipName>Bonus</relationshipName>
    <type>Lookup</type>
</CustomField>