force-app/main/default/objects/Bonus__c/fields/Receive_at__c.field-meta.xml
<CustomField>
    <fullName>Receive_at__c</fullName>
    <label>Receive at</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Monthly payslip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>