force-app/main/default/objects/Bonus__c/fields/Requestedby__c.field-meta.xml
<CustomField>
    <fullName>Requestedby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>