force-app/main/default/objects/Bonus__c/recordTypes/Violation.recordType-meta.xml
<RecordType>
    <fullName>Violation</fullName>
    <active>true</active>
    <label>Violation</label>
</RecordType>