force-app/main/default/objects/Bonus__c/validationRules/Bonus_fields_must_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Bonus_fields_must_be_filled</fullName>
    <active>true</active>
    <errorConditionFormula>And ( RecordType.Name = &apos;Bonus&apos;, 
Or (Ispickval ( Receive_at__c, &quot;&quot; ) , Ispickval ( Bonus_in__c, &quot;&quot; )))</errorConditionFormula>
    <errorMessage>Please input fields Receive at and Bonus in!</errorMessage>
</ValidationRule>