force-app/main/default/objects/Bonus__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Employee__c</columns>
    <columns>Accounted_Date__c</columns>
    <columns>PaidType__c</columns>
    <columns>PaidStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>